@@ -710,7 +710,6 @@ enum
 	BOBBYR_GUNS_IN_STOCK,
 	BOBBYR_GUNS_QTY_ON_ORDER,
 	BOBBYR_GUNS_DAMAGED,
-	BOBBYR_GUNS_WEIGHT,				//10
 	BOBBYR_GUNS_SUB_TOTAL,
 	BOBBYR_GUNS_PERCENT_FUNCTIONAL,
 
